hydroflow/tests/compile-fail/surface_syntax_eol_op.stderr
error: `source_iter` must have exactly 1 output(s), actually has 0.
 --> tests/compile-fail/surface_syntax_eol_op.rs:5:9
  |
5 |         source_iter(0..10)
  |         ^^^^^^^^^^^^^^^^^^
